--- a/.github/workflows/deploy_to_env.yaml
+++ b/.github/workflows/deploy_to_env.yaml
@@ -45,7 +45,7 @@ jobs:
     steps:
       - name: Validate source branch
         run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" && "${{ github.event.inputs.env }}" == "prod" && "${{ github.ref }}" != refs/heads/release/* ]]; then
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" && "${{ inputs.env }}" == "prod" && "${{ github.ref }}" != refs/heads/release/* ]]; then
             echo "Error: Can only deploy from existing release/* branches in production"
             exit 1
           fi
@@ -54,11 +54,11 @@ jobs:
     needs: [ validate-source-branch ]
     runs-on: ubuntu-latest
     environment:
-      name: ${{ github.event.inputs.env }}
+      name: ${{ inputs.env }}
     env:
-      RELEASE_VERSION: ${{ github.event.inputs.version }}
+      RELEASE_VERSION: ${{ inputs.version }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      RELEASE_BRANCH: release/${{ github.event.inputs.version }}
+      RELEASE_BRANCH: release/${{ inputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -84,6 +84,8 @@ jobs:
     if: failure()
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      RELEASE_VERSION: ${{ inputs.version }}
+      RELEASE_BRANCH: release/${{ inputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -91,12 +93,12 @@ jobs:
         continue-on-error: true
         run: |
           release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.event.inputs.version }} \
+            https://api.github.com/repos/${{ github.repository }}/releases/tags/$RELEASE_VERSION \
             | jq -r '.id')
           if [ "$release_id" != "null" ]; then
             curl -X DELETE -H "Authorization: token $GITHUB_TOKEN" \
               https://api.github.com/repos/${{ github.repository }}/releases/$release_id
-            echo "Release ${{ github.event.inputs.version }} deleted."
+            echo "Release $RELEASE_VERSION deleted."
           else
             echo "Release $RELEASE_VERSION not found."
           fi
@@ -107,6 +109,6 @@ jobs:
           git push --delete origin $RELEASE_VERSION
 
       - name: Delete release branch
-        if: ${{ github.event.inputs.delete_release_branch_on_failure }}
+        if: ${{ inputs.delete_release_branch_on_failure }}
         run: |
-          git push origin --delete release/${{ github.event.inputs.version }}
+          git push origin --delete $RELEASE_BRANCH
