Add continue on error condition

--- a/.github/workflows/deploy_to_env.yaml
+++ b/.github/workflows/deploy_to_env.yaml
@@ -120,5 +120,6 @@ jobs:
 
       - name: Delete release branch
         if: ${{ inputs.delete_release_branch_on_failure }}
+        continue-on-error: true
         run: |
           git push origin --delete $RELEASE_BRANCH
