--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -1,5 +1,5 @@
 name: Create Release
-run-name: Create release for ${{ github.event.release.tag_name }} by ${{ github.actor }}
+run-name: Create a new release
 on:
   workflow_dispatch:
     inputs:
@@ -30,9 +30,6 @@ jobs:
         run: |
           if [[ "${{ github.event.inputs.release_type }}" != "patch" && "${{ github.ref }}" != "refs/heads/main" ]]; then
             echo "Error: Can only create/update release from the main branch for non-patch releases"
-            exit 1
-          elif [[ "${{ github.event.inputs.release_type }}" == "patch" && ! "${{ github.ref }}" =~ ^refs/heads/release/ ]]; then
-            echo "Error: Can only create patch releases from existing release/* branches"
             exit 1
           fi
 
@@ -125,7 +122,7 @@ jobs:
     with:
       env: 'prod'
       version: ${{ needs.bump-version.outputs.new_version }}
-      delete_release_branch_on_failure: false
+      delete_release_branch_on_failure: true
 #  deploy:
 #    needs: [prepare-release, bump-version]
 #    runs-on: ubuntu-latest
