--- a/.github/workflows/deploy_to_env.yaml
+++ b/.github/workflows/deploy_to_env.yaml
@@ -9,8 +9,9 @@ on:
         default: 'dev'
         type: choice
         options:
-          - major
-          - minor
+          - dev
+          - uat
+          - prod
       version:
         description: 'The version that will be deployed'
         required: true
