--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -8,7 +8,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  call-deploy-job:
+  deploy-job:
     uses: ./.github/workflows/deploy_to_env.yaml
     with:
       env: 'dev'
