--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -1,7 +1,6 @@
 name: Prepare release
 
 on:
-#  workflow_dispatch:
   workflow_call:
     inputs:
       release_type:
@@ -9,10 +8,6 @@ on:
         required: true
         default: 'minor'
         type: string
-#        options:
-#            - major
-#            - minor
-#            - patch
     outputs:
       release_version:
         description: 'The new version number'
@@ -30,7 +25,7 @@ jobs:
           if [[ "${{ github.event.inputs.release_type }}" != "patch" && "${{ github.ref }}" != "refs/heads/main" ]]; then
             echo "Error: Can only create major/minor release from the main branch"
             exit 1
-          elif [[ "${{ github.event.inputs.release_type }}" == "patch" && "${{ github.ref }}" != "refs/heads/release/*" ]]; then
+          elif [[ "${{ github.event.inputs.release_type }}" == "patch" && "${{ github.ref }}" != refs/heads/release/* ]]; then
             echo "Error: Can only create patch release from a release branch"
             exit 1
           fi
@@ -116,21 +111,3 @@ jobs:
             git push origin release/$RELEASE_VERSION
             echo "release_branch=release/$RELEASE_VERSION" >> $GITHUB_OUTPUT
           fi
-#          if git ls-remote --exit-code --heads origin release/$RELEASE_VERSION; then
-#            git checkout release/$RELEASE_VERSION
-#            git pull
-#          else
-#            git checkout -b release/$RELEASE_VERSION
-#            git push origin release/$RELEASE_VERSION
-#          fi
-#          echo "release_branch=release/$RELEASE_VERSION" >> $GITHUB_OUTPUT
-
-
-
-#  call-deploy-job:
-#    uses: ./.github/workflows/deploy_to_env.yaml
-#    needs: [prepare-release, bump-version]
-#    with:
-#      env: 'prod'
-#      version: ${{ needs.bump-version.outputs.new_version }}
-#      delete_release_branch_on_failure: true
