--- a/.github/workflows/deploy_to_env.yaml
+++ b/.github/workflows/deploy_to_env.yaml
@@ -204,6 +204,17 @@ jobs:
           else
             echo "Release $RELEASE_VERSION not found."
           fi
+          
+          draft_release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/releases \
+            | jq -r '.[] | select(.tag_name == "'$RELEASE_VERSION'" and .draft == true) | .id')
+          if [ "$draft_release_id" != "null" ]; then
+            curl -X DELETE -H "Authorization: token $GITHUB_TOKEN" \
+              https://api.github.com/repos/${{ github.repository }}/releases/$draft_release_id
+            echo "Draft release $RELEASE_VERSION deleted."
+          else
+            echo "Draft release $RELEASE_VERSION not found."
+          fi
       - name: Delete Git tag
         continue-on-error: true
         run: |
