--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -1,5 +1,5 @@
 name: Prepare release
-
+# Create release branch and determine the next version number
 on:
   workflow_call:
     inputs:
@@ -107,7 +107,10 @@ jobs:
             echo "release_branch=$CURRENT_BRANCH" >> $GITHUB_OUTPUT
           else
             echo "This is not a patch release."
+            git push origin --delete release/$RELEASE_VERSION
             git checkout -b release/$RELEASE_VERSION
             git push origin release/$RELEASE_VERSION
             echo "release_branch=release/$RELEASE_VERSION" >> $GITHUB_OUTPUT
           fi
+          git tag $RELEASE_VERSION
+          git push origin $RELEASE_VERSION
