Check if branch exists before removing

--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -88,6 +88,7 @@ jobs:
         with:
           ref: ${{ github.ref }}
           persist-credentials: false
+          fetch-depth: 0
 
       - name: Authenticate with github
         run: |
@@ -107,7 +108,9 @@ jobs:
             echo "release_branch=$CURRENT_BRANCH" >> $GITHUB_OUTPUT
           else
             echo "This is not a patch release."
-            git push origin --delete release/$RELEASE_VERSION
+            if git show-ref --verify --quiet refs/heads/release/$RELEASE_VERSION; then
+              git push origin --delete release/$RELEASE_VERSION
+            fi
             git checkout -b release/$RELEASE_VERSION
             git push origin release/$RELEASE_VERSION
             echo "release_branch=release/$RELEASE_VERSION" >> $GITHUB_OUTPUT
