--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -117,3 +117,13 @@ jobs:
           fi
           git tag $RELEASE_VERSION
           git push origin $RELEASE_VERSION
+          
+      - name: Create GitHub release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ needs.bump-version.outputs.new_version }}
+          release_name: Release ${{ needs.bump-version.outputs.new_version }}
+          body: |
+            Release ${{ needs.bump-version.outputs.new_version }}
+          draft: false
+          prerelease: false
