--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -28,8 +28,9 @@ jobs:
             echo "source_branch=$latest_release_branch" >> $GITHUB_OUTPUT
             echo "source_branch=$latest_release_branch"
           else
-            echo "source_branch=main" >> $GITHUB_OUTPUT
-            echo "source_branch=main"
+            echo "source_branch=ref/head/main" >> $GITHUB_OUTPUT
+            echo "source_branch=ref/head/main"
+          fi
 
   validate-source-branch:
     runs-on: ubuntu-latest
